# AndroidMic

./: .gitignore  .gitmodules  LICENSE  Project_Tree.txt  README.md
.github/workflows/: ci.yml  release.yml
Android/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle  settings.gradle.kts
Android/app/: .gitignore  build.gradle  build.gradle.kts  nightly-signing-key.jks
Android/app/src/debug/res/values/: strings.xml
Android/app/src/debug/res/xml/: accessory_filter.xml
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: AudioBuffer.h  CMakeLists.txt  Logging.h  OboeRecorder.cpp  OboeRecorder.h  jni_bridge.cpp
Android/app/src/main/java/com/example/androidMic/: AndroidMicApp.kt  AppModule.kt  Preferences.kt
Android/app/src/main/java/com/example/androidMic/domain/audio/: AudioBuffer.kt  MicAudioManager.kt  OboeRecorder.kt
Android/app/src/main/java/com/example/androidMic/domain/service/: Command.kt  ForegroundService.kt  Packets.kt  ServiceUtil.kt
Android/app/src/main/java/com/example/androidMic/domain/streaming/: AdbStreamer.kt  BluetoothStreamer.kt  MicStreamManager.kt  Streamer.kt  UdpStreamer.kt  UsbAdbStreamer.kt  UsbStreamer.kt  WifiStreamer.kt
Android/app/src/main/java/com/example/androidMic/ui/: Event.kt  MainActivity.kt  MainViewModel.kt  States.kt
Android/app/src/main/java/com/example/androidMic/utils/: Command.kt  Data.kt  Debug.kt  PreferencesManager.kt  States.kt  Utils.kt
Android/app/src/main/java/com/example/androidmic/: AndroidMicApp.kt
Android/app/src/main/java/com/example/androidmic/ui/: Event.kt  MainActivity.kt  MainViewModel.kt
Android/app/src/main/java/com/example/androidmic/utils/: Command.kt  Data.kt  States.kt  Utils.kt
Android/app/src/main/java/com/example/microphone/: AudioHelper.kt  BackgroundHelper.kt  BluetoothHelper.kt  DefaultApp.kt  MainActivity.kt  USBHelper.kt
Android/app/src/main/java/com/example/microphone/audio/: AudioBuffer.kt  MicAudioManager.kt  OboeRecorder.kt
Android/app/src/main/java/com/example/microphone/service/: ForegroundService.kt
Android/app/src/main/java/com/example/microphone/streaming/: BluetoothStreamer.kt  MicStreamManager.kt  Streamer.kt  WifiStreamer.kt
Android/app/src/main/java/io/github/teamclouday/AndroidMic/: AndroidMicApp.kt  AppModule.kt  Preferences.kt
Android/app/src/main/java/io/github/teamclouday/androidMic/: AndroidMicApp.kt  AppModule.kt  Preferences.kt
Android/app/src/main/proto/: message.proto  messages.proto
Android/app/src/main/res/drawable/: dark_mode_24px.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  menu_48px.xml  settings_24px.xml  usb_24px.xml  wifi_24px.xml
Android/app/src/main/res/drawable-v24/: ic_launcher_background.xml
Android/app/src/main/res/layout/: activity_main.xml  alertdialog.xml
Android/app/src/main/res/layout-land/: activity_main.xml
Android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
Android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Android/app/src/main/res/values-fr/: strings.xml
Android/app/src/main/res/values-night/: themes.xml
Android/app/src/main/res/values-zh-rCN/: strings.xml
Android/app/src/main/res/xml/: accessory_filter.xml  locales_config.xml
Android/app/src/nightly/res/values/: strings.xml
Android/app/src/releaseProto/res/values/: strings.xml
Android/app/src/releaseTesting/res/values/: strings.xml
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
Assets/: README.md
RustApp/: .gitattributes  .gitignore  Cargo.toml  Makefile  NOTE.md  README.md  build.rs  io.github.teamclouday.android-mic.json  justfile
RustApp/.cargo/: config.toml
RustApp/benches/: audio.rs
RustApp/i18n/en/: android_mic.ftl
RustApp/i18n/fr/: android_mic.ftl
RustApp/i18n/zh-CN/: android_mic.ftl
RustApp/res/linux/: desktop_entry.desktop  metainfo.xml
RustApp/res/macos/: Info.plist  entitlements.plist
RustApp/src/: app.rs  audio.rs  config.rs  icon.rs  localize.rs  main.rs  map_bytes.rs  message.rs  single_instance.rs  start_at_login.rs  utils.rs  view.rs
RustApp/src/audio/: chunked_ring_buffer.rs  denoise.rs  denoise_rnnoise.rs  denoise_speex.rs  mod.rs  player.rs  postprocessing.rs  process.rs  resampler.rs  speexdsp.rs
RustApp/src/proto/: message.proto
RustApp/src/streamer/: adb_streamer.rs  message.rs  mod.rs  streamer_runner.rs  streamer_sub.rs  tcp_streamer.rs  tcp_streamer2.rs  udp_streamer.rs  udp_streamer2.rs  usb_streamer.rs  usb_streamer2.rs
RustApp/src/streamer/usb/: aoa.rs  frame.rs  mod.rs
RustApp/src/ui/: app.rs  icon.rs  message.rs  mod.rs  tray.rs  view.rs  wave.rs
RustApp/src/usb/: aoa.rs  frame.rs  mod.rs
Windows/: .gitignore  README.md
Windows/AndroidMic/: AdvancedWindow.xaml  AdvancedWindow.xaml.cs  AndroidMic.csproj  AndroidMic.sln  App.config  App.xaml  App.xaml.cs  AudioHelper.cs  BluetoothHelper.cs  MainWindow.xaml  MainWindow.xaml.cs  SelectNetworkWindow.xaml  SelectNetworkWindow.xaml.cs  USBHelper.cs  WaveDisplay.cs  packages.config
Windows/AndroidMic/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
Windows/Experimental/: CheckNetwork.cs  Experimental.csproj  Program.cs  README.md  RecordSpeaker.cs  TestWasapiOut.cs
Windows/Experimental/Properties/: AssemblyInfo.cs
android-mic-rs/: .gitignore  Cargo.toml  Makefile  NOTE.md  README.md  build.rs
android-mic-rs/.cargo/: config.toml
android-mic-rs/i18n/en/: android_mic.ftl
android-mic-rs/i18n/fr/: android_mic.ftl
android-mic-rs/src/: adb_streamer.rs  app.rs  audio.rs  audio2.rs  circular_buffer.rs  config.rs  main.rs  main2.rs  streamer.rs  streamer_sub.rs  tcp_streamer.rs  tcp_streamer_async.rs  udp_streamer.rs  user_action.rs  utils.rs  view.rs
android-mic-rs/src/my_widget/: mod.rs
android-mic-rs/src/my_widget/audio_wave/: mod.rs
android-mic-rs/src/my_widget/drop_down/: mod.rs
android-mic-rs/src/streamer/: adb_streamer.rs  mod.rs  streamer_sub.rs  streamer_trait.rs  tcp_streamer_async.rs
metadata/en-US/: full_description.txt  short_description.txt
(+121 files in other folders)
