[package]
name = "android-mic"
version = "2.1.3"
edition = "2021"
authors = [
    "wiiznokes <wiiznokes2@gmail.com>",
    "teamclouday <teamclouday@gmail.com>",
]
license = "GPL-3.0-only"


[package.metadata.packager]
product_name = "AndroidMic"
version = "2.1.3"
identifier = "io.github.teamclouday.android-mic"
icons = ["../Assets/icon512.png"]
category = "Utility"
description = "Use your Android phone as a mic for your PC"
long_description = "Use your Android phone as a mic for your PC"
homepage = "https://github.com/teamclouday/AndroidMic"

[package.metadata.packager.windows]
allow_downgrades = true

[package.metadata.packager.nsis]
display_language_selector = true
installer_icon = "res/windows/app_icon.ico"
installer_mode = "both"

[package.metadata.packager.macos]
entitlements = "res/macos/entitlements.plist"
info_plist_path = "res/macos/Info.plist"

[lints.rust]
dead_code = "allow"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(ANDROID_MIC_FORMAT, values("flatpak"))',
] }

[lints.clippy]
to_string_trait_impl = "allow"


[dependencies]
clap = { version = "4", features = ["derive"] }
# linux: alsa will probably be included as a fallback ?
cpal = { version = "0.15", features = ["jack"] }
rtrb = "0.3"
local-ip-address = "0.6"
log = "0.4"
zconf = "0.1"
serde = "1"
light_enum = "0.2"
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1", features = ["backtrace"] }
thiserror = "2"
enum_dispatch = "0.3"
futures = "0.3"
cached = "0.54"
constcat = "0.5"
cargo-packager-resource-resolver = { version = "0.1", features = [
    "auto-detect-format",
] }
either = "1"
i18n-embed = { version = "0.15", features = [
    "fluent-system",
    "desktop-requester",
] }
rust-embed = "8"
i18n-embed-fl = "0.9"
directories = "6"
prost = "0.13"
tokio-util = { version = "0.7", features = ["codec", "net"] }
chrono = "0.4"
libcosmic = { git = "https://github.com/pop-os/libcosmic", rev = "337b80d4ca02a63631668212bccbace22b8bb49f", features = [
    "winit",
    "wgpu",
    "tokio",
    "multi-window",
] }
byteorder = "1"
nusb = "0.1"
serde_with = "3"
strum = { version = "0.26", features = ["derive"] }
resvg = "0.45.0"
rubato = "0.16.1"
once_cell = "1.21.1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
env_logger = "0.11.7"

[build-dependencies]
prost-build = "0.13"


[target.'cfg(target_os = "windows")'.dependencies]
mslnk = "0.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
