[package]
name = "android-mic"
version = "2.1.7"
edition = "2024"
authors = [
    "wiiznokes <wiiznokes2@gmail.com>",
    "teamclouday <teamclouday@gmail.com>",
]
license = "GPL-3.0-only"


[package.metadata.packager]
product_name = "AndroidMic"
identifier = "io.github.teamclouday.AndroidMic"
icons = ["../Assets/icon512.png"]
category = "Utility"
description = "Use your Android phone as a mic for your PC"
long_description = "Use your Android phone as a mic for your PC"
homepage = "https://github.com/teamclouday/AndroidMic"

[package.metadata.packager.windows]
allow_downgrades = true

[package.metadata.packager.nsis]
display_language_selector = true
installer_icon = "res/windows/app_icon.ico"
installer_mode = "both"

[package.metadata.packager.macos]
entitlements = "res/macos/entitlements.plist"
info_plist_path = "res/macos/Info.plist"

[lints.rust]
dead_code = "allow"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(ANDROID_MIC_FORMAT, values("flatpak"))',
] }

[lints.clippy]
to_string_trait_impl = "allow"

[features]
default = ["usb"]
usb = ["nusb"]

[dependencies]
clap = { version = "4", features = ["derive"] }
# linux: alsa will probably be included as a fallback ?
cpal = { version = "0.16", features = ["jack"] }
rtrb = "0.3"
local-ip-address = "0.6"
log = "0.4"
zconf = "0.1"
serde = "1"
light_enum = "0.2"
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1", features = ["backtrace"] }
thiserror = "2"
enum_dispatch = "0.3"
futures = "0.3"
cached = "0.55"
constcat = "0.6"
cargo-packager-resource-resolver = { version = "0.1", features = [
    "auto-detect-format",
] }
either = "1"
i18n-embed = { version = "0.15", features = [
    "fluent-system",
    "desktop-requester",
] }
rust-embed = { version = "8", features = ["debug-embed"] }
i18n-embed-fl = "0.9"
directories = "6"
prost = "0.14"
tokio-util = { version = "0.7", features = ["codec", "net"] }
chrono = "0.4"
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", rev = "a85b3693994ef2b8275eca6a9eccc86a2d7e9f86", features = [
    "winit",
    "wgpu",
    "tokio",
    "multi-window",
] }
byteorder = "1"
nusb = { version = "0.1", optional = true }
serde_with = "3"
strum = { version = "0.27", features = ["derive"] }
resvg = "0.45"
rubato = "0.16"
fix-path-env = { git = "https://github.com/wiiznokes/fix-path-env-rs", rev = "8612a0d8590843dbe9c6326d26292963e6a97f2a" }
env_logger = "0.11"
nnnoiseless = "0.5"

[build-dependencies]
prost-build = "0.14"


[target.'cfg(target_os = "windows")'.dependencies]
mslnk = "0.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
