[package]
name = "android-mic"
version = "2.2.3"
edition = "2024"
authors = [
    "wiiznokes <wiiznokes2@gmail.com>",
    "teamclouday <teamclouday@gmail.com>",
]
license = "GPL-3.0-only"
rust-version = "1.88.0"


[package.metadata.packager]
product_name = "AndroidMic"
identifier = "io.github.teamclouday.AndroidMic"
icons = ["../Assets/icon512.png"]
category = "Utility"
description = "Use your Android phone as a mic for your PC"
long_description = "Use your Android phone as a mic for your PC"
homepage = "https://github.com/teamclouday/AndroidMic"

[package.metadata.packager.windows]
allow_downgrades = true

[package.metadata.packager.nsis]
display_language_selector = true
installer_icon = "res/windows/app_icon.ico"
installer_mode = "both"

[package.metadata.packager.macos]
entitlements = "res/macos/entitlements.plist"
info_plist_path = "res/macos/Info.plist"

[lints.rust]
dead_code = "allow"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(ANDROID_MIC_FORMAT, values("flatpak"))',
] }

[lints.clippy]
to_string_trait_impl = "allow"

[features]
default = ["usb", "adb"]
usb = ["nusb"]
adb = []

[dependencies]
clap = { version = "4", features = ["derive"] }
# linux: alsa will probably be included as a fallback ?
cpal = { version = "0.16", features = ["jack"] }
rtrb = "0.3"
local-ip-address = "0.6"
log = "0.4"
zconf = "0.1.3"
serde = "1"
light_enum = "0.2.2"
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1", features = ["backtrace"] }
thiserror = "2"
enum_dispatch = "0.3"
futures = "0.3"
cached = "0.56"
constcat = "0.6"
cargo-packager-resource-resolver = { version = "0.1", features = [
    "auto-detect-format",
] }
either = "1"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
rust-embed = { version = "8", features = ["debug-embed"] }
i18n-embed-fl = "0.10"
directories = "6"
prost = "0.14"
tokio-util = { version = "0.7", features = ["codec", "net"] }
chrono = "0.4"
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", rev = "8412dd593913b85618ec30e8b92a58aaa0ad6bb8", default-features = false, features = [
    "winit",
    "wgpu",
    "tokio",
    "multi-window",
    "markdown",
    # todo: remove this
    "highlighter",
    "about",
] }
notify-rust = "4"
byteorder = "1"
nusb = { version = "0.1", optional = true }
serde_with = "3"
strum = { version = "0.27", features = ["derive"] }
resvg = "0.45"
rubato = "0.16"
fix-path-env = { git = "https://github.com/wiiznokes/fix-path-env-rs", rev = "8612a0d8590843dbe9c6326d26292963e6a97f2a" }
env_logger = "0.11"
nnnoiseless = "0.5"
open = "5"
speexdsp = { git = "https://github.com/wiiznokes/speexdsp-rs-fork", branch = "vendor", features = [
    "sys",
    "vendored-sys",
] }
fslock = "0.2.1"

[build-dependencies]
prost-build = "0.14"


[target.'cfg(target_os = "windows")'.dependencies]
mslnk = "0.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = "0.21.1"

# [patch."https://github.com/pop-os/libcosmic.git"]
# libcosmic = { path = "../../libcosmic" }

# [patch."https://github.com/wiiznokes/speexdsp-rs-fork"]
# speexdsp = { path = "../../speexdsp-rs-fork" }
