[package]
name = "android-mic"
version = "0.1.0"
edition = "2021"


[dependencies]
# linux: alsa will probably be included as a fallback ?
cpal = { version = "0.15", features = ["jack"] }
byteordered = "0.6"
rtrb = "0.3"
crossterm = { version = "0.28" }
clap = { version = "4.3", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
local-ip-address = "0.6"
env_logger = "0.11"
log = "0.4"
zconf2 = { git = "https://github.com/cosmic-utils/configurator" }
serde = "1"
light_enum = "0.2"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["winit", "wgpu"]

# [patch."https://github.com/pop-os/libcosmic"]
# libcosmic = { path = "../../libcosmic" }
